[metadata]
name = hecker
version = 0.1.0
url = https://github.com/packit/redhat-internal-test-package
description = Traslator which translates your text to hacker text.
long_description = file: README.md
long_description_content_type = text/markdown
author = Red Hat
author_email = user-cont-team@redhat.com
license = GPL-2.0
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GPL-2.0 License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = click
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    hecker=hecker:main
